--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
     <title>Haider Holding</title>
   </head>
   <body>
