--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- <div class="logo"> -->
         <img
           class="logo"
-          src="/images/building-about.jpg"
+          src="./images/building-about.jpg"
           alt="logo"
           width="100px"
           height="100px"
